stylesheets/jbt-styles.scss
/* ... */
#installation_tabs {
  margin-top: 2em;
  .nav-tabs > .active > a {
  }
}

#installation-tabs-content {
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 2em;
  /*border-left: 1px solid rgb(221, 221, 221);
  border-right: 1px solid rgb(221, 221, 221);
  border-bottom: 1px solid rgb(221, 221, 221);
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;*/
  //background: rgb(243, 243, 243);
  padding-top: 20px;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
  
  table {
    margin-top: 2em;
    tr {
      text-align: left;
      &:nth-child(2n) {
        background: rgb(251, 251, 251)
      }
      &:nth-child(2n+1) {
        background: rgb(247, 247, 247);  
      }
      th, td {
        border: 1px solid rgb(221, 221, 221);
        padding-top: 5px;
        padding-bottom: 5px;
        padding-left: 10px;
        padding-right: 10px;
      }
    }
  }
}
#download {
  margin-top: 30px;
}

.download-instructions {
  h3 {
    margin-top: 0;
  }
  h4 {
    margin-top: 2em;
    & + div {
      display: block;
      padding: 1em;
      line-height: 20px;
      border: 1px solid rgb(221, 221, 221);
      border-radius: 4px 4px 4px 4px;
      box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.055);
    }
  }
  .nav-tabs > .active > a {
    color: rgb(101, 101, 101);
  }
}

span.label {
  font-weight: normal;
  text-shadow: none;
  &#displayed-version {
    vertical-align:top;
  }
  
  &.label_stable, &.label_latest_release {
    background-color: rgb(70, 136, 71);
  }
  &.label_development {
    background-color: rgb(58, 135, 173);
  }
  &.label.label_nightly {
    background-color: rgb(248, 148, 6);
  }
  &.float-right {
    font-size: smaller;
  }
}

.sidenav  li:first-child  a {
    border-radius: 6px 6px 0 0;
}

.sidenav > li:last-child > a {
    
}

.sidenav .active  a {
    border: 0 none;
    box-shadow: 1px 0 0 rgba(0, 0, 0, 0.1) inset, -1px 0 0 rgba(0, 0, 0, 0.1) inset;
    padding: 9px 15px;
    position: relative;
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
    z-index: 2;
}


// *************************************
// Features
// *************************************
features {
  padding-top: 0px;
  padding-bottom: 0px;
  padding-left: 10px;
  padding-right: 10px;
  
  a {
    width: 100%;
    text-align: center;
  }

  img {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }
}

/*.feature {
  img {
    display: block;
    margin-left: 20px;
    margin-right: 20px;
  }
  &:nth-child(even) img {
    float: left;
  }
  &:nth-child(odd) img {
    float: right;
  }
  & .featureContent, & .hero-unit {
    padding: 30px;
  }
}

.featureContent p {
  text-align: justify;
}

.features-separator hr {
  clear:both;
  margin-top: 0px;
  margin-bottom: 0px;
}

.feature-menu {
  padding-top: 20px;
  li {
    display: inline;
    padding-right: 30px;
    
    h4 {
      display: inline;
    }
  }
}*/

@media screen and (min-width: 940px) {
  .feature {
    .sect1 {
      //position: relative;
      margin-bottom: 2em;
      &::before {
        @include horizontal-bottom-ruler(1px);
      }
      &:last-child::before {
        content: "";
        background-image: none;
      }
      &::after {
        display:block;
        clear:both;
        margin-bottom: 2em;
        content: ""; // mandatory content, even empty
      }
      p {
        font-size: 1.1em;
        font-weight: 200;
        line-height: 30px;
      }
    }
  
    .sect2 {
      padding-top: 20px;
    }
  
    $space: 48%;
    .sect1:nth-child(odd) {
      H2, .sect2 > :not(.imageblock) {
        float: left;
        clear: left;
        width: $space;
        //margin:0px;
      }
      .sect2 > .imageblock {
        float: right;
        margin-top: -4em;
        width: $space;
      }
    } 
  
    .sect1:nth-child(even) { 
      H2, .sect2 > :not(.imageblock) {
        float: right;
        clear: right;
        width: $space;
        //margin:0px;
      }
      .sect2 > .imageblock {
        float: left;
        margin-top: -4em;
        width: $space;
      }
    }  
  }
}

.tableblock {
  margin-bottom: 1em;
  th, td {
    border: 1px solid rgb(101, 101, 101);
    padding: 4px;
  }
}

// *************************************
// News / Blog posts
// *************************************
@mixin header($font-size) {
  font-size: $font-size;
  text-decoration: none;
  text-align: left;
  color: #4A5D75;
}

.post {
  padding-left: 0px;
  padding-right: 0px;
  text-align: left;

  &:last-child hr {
    display:none;
  }
  
  .title-wrapper {
    img.img-polaroid {
      float:left;
      margin-right: 10px;
    }
    .title {
      padding-bottom: 5px;
      
      h3 {
        text-decoration: none;
        margin-bottom: 0px;
      }
      
      h4 {
        text-decoration: none;
        margin-bottom: 0px;
      }
      
      .author {
        color: #777;
      }
      .tags {
        color: #777;
      }
      .icon-tags {
        display: inline;
      }
    }
  }
  pre {
    max-height: none;
    margin-top: 10px;
    margin-bottom: 10px;
    width: auto;
    margin-left: 0px;
    margin-right: 0px;
    background-image: none;
  }
  
  .body {
    margin-bottom: 20px;
    margin-top: 20px;
    clear: both;
    
    h1 {
      @include header(20px);
    }
    h2 {
      @include header(18px);
    }
    h3 {
      @include header(16px);
    }
  }
  
  .navigation {
    hr {
      display: block;
    }
    .previous {
      text-align: left;
    }
    .next {
      text-align: right;
    }
  }
  
  .admonitionblock {
    table {
      td {
        border : 1px solid rgb(101, 101, 101);
        padding: 1em;
      }
      
    }
  }
  
}
/* ... */

